--- a/Primeiro_Projeto/style/main.css
+++ b/Primeiro_Projeto/style/main.css
@@ -12,6 +12,7 @@ img{
   margin-left: auto;
   padding-left: 1em;
   padding-right: 1em;
+  max-width: 980px
 }
 
 .header{
@@ -158,4 +159,173 @@ img{
 .people-cards__text{
   color: #929da5;
   font-size: 14px;
+}
+
+.content{
+  background: #f8f9f9;
+  padding: 20px 0 80px;
+  border-top: 1px solid #e3e3e3;
+}
+
+.content h3{
+  color: #737c85;
+  font-size: 21px;
+  padding-top: 40px;
+  font-weight: 400;
+}
+.content p{
+  color: #929da5;
+  font-size: 14px;
+  word-spacing: 3px;
+}
+
+.button{
+  padding: 15px 40px;
+  border-radius: 3px;
+  background: red;
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 15px;
+  margin-right: 15px;
+  display: inline-block;
+  transition: background .5s;
+}
+
+.button:hover{
+  background-color: #939da5;
+}
+
+.button-primary{
+  background-color: #69c6ae;
+  color: white;
+}
+.button-secondary{
+  background-color: #455357;
+
+}
+
+.last-articles__title{
+  background-color: #63c6ae;
+  padding: 5px 0;
+}
+
+.last-articles__title h2{
+  font-size: 24px;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 400;
+
+}
+
+.last-articles__thumbs{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: auto;
+  grid-gap: 0;
+
+}
+
+.last-articles__thumbs img{
+  display: block;
+  width: 100%;
+
+}
+
+.laptop-slider{
+  background-color: #242a2c;
+  padding: 125px , 100px;
+  width: 100%;
+  overflow: auto;
+
+}
+
+.slideshow{
+  white-space: nowrap;
+
+}
+
+.slideshow figure{
+  display: inline-block;
+}
+
+.quote-container{
+  background-color: #63c6ae;
+  padding: 50px 0;
+  border-bottom: 12px solid #48b9a1;
+}
+
+.quote-slideshow h2{
+  color: white;
+  font-size: 30px;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.quote-slideshow figcaption{
+  color: white;
+  font-size: 18px;
+  text-align: center;
+}
+
+.no-js .quote-container figure + figure{
+  margin-top: 5em;
+}
+
+.footer{
+  background-color: #242a2c;
+  padding-top: 50px 0 250px;
+  color: #454e51;
+  font-size: 14px;
+}
+.footer__links li{
+  list-style: none;
+}
+
+.footer__links a{
+  color: #454e51;
+  display: block;
+  font-weight: 600;
+}
+
+@media screen and (min-width: 1024px){
+    .header{
+        position: fixed;
+    }
+    .logo-text{
+      width: 25%;
+      box-sizing: border-box;
+    }
+    .header__btnMenu{
+      display: none;
+    }
+
+    .header__nav{
+      float: left;
+      width: 75%;
+      clear: none;
+      max-width: 800px;
+    }
+
+    .header__nav ul{
+      display: flex;
+      justify-content: space-around;
+
+    }
+
+    .header__nav a{
+      background: white;
+
+    }
+
+    .header__nav li{
+      border-bottom: none;
+      flex-grow: 1;
+    }
+
+    .people-cards{
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 20px
+    }
 }
